Kubernetes/AKS/11 Ingress Context Path Based Routing/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: ingress-cpr
spec:
  defaultBackend:
    service:
      name: myapp3-service
      port:
        number: 80
  rules:
    - http:
        paths: 
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: myapp1-service
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: myapp2-service
                port:
                  number: 80
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: usermgmt-webapp-service
          #       port:
          #         number: 80
